; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_mktitanimg.c_cs_set_sum.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_mktitanimg.c_cs_set_sum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CKSUM_MAGIC_NUMBER = common dso_local global i64 0, align 8
@SEEK_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cs_set_sum(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i64, i64* @CKSUM_MAGIC_NUMBER, align 8
  store i64 %9, i64* %8, align 8
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @SEEK_END, align 4
  %15 = call i32 @fseek(i32* %13, i32 -8, i32 %14)
  br label %20

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @SEEK_END, align 4
  %19 = call i32 @fseek(i32* %17, i32 0, i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @fwrite(i64* %8, i32 1, i32 4, i32* %21)
  %23 = icmp slt i32 %22, 4
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  store i32 0, i32* %4, align 4
  br label %31

25:                                               ; preds = %20
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @fwrite(i64* %6, i32 1, i32 4, i32* %26)
  %28 = icmp slt i32 %27, 4
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  store i32 0, i32* %4, align 4
  br label %31

30:                                               ; preds = %25
  store i32 1, i32* %4, align 4
  br label %31

31:                                               ; preds = %30, %29, %24
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @fseek(i32*, i32, i32) #1

declare dso_local i32 @fwrite(i64*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
